--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ canvas {
 
  <BODY>
       <div style="position: fixed;width: 100%;top: 46%;font-family: math;font-size: 16px;">
-        <h1 style="text-align: center; color: palevioletred;">Nguyễn Thị Nhân Tâm <br> Nhõng Nhẽo 🥰</h1>
+        <h1 style="text-align: center; color: palevioletred;">Nhân Tâm <br> Nhõng Nhẽo <br>🥰🥰🥰</h1>
       </div>
       <canvas id="pinkboard"></canvas>
       <div style="display:none">
