--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
         <div class="container-fluid">
           <div class="contentHeader">
             <div class="boxLogo">
-              <a href>
+              <a href="./index.html">
                 <img src="./public/image/logo.svg" alt>
                 <img src="./public/image/logo-name.svg" alt>
               </a>
             </div>
             <div class="boxMenu">
               <ul class="menu">
-                <li class="item"><a href>Home</a></li>
+                <li class="item"><a href="./index.html">Home</a></li>
                 <li class="item"><a href>Services</a></li>
                 <li class="item"><a href>Pricing</a></li>
                 <li class="item"><a href>Counties</a></li>
-                <li class="item"><a href>About us</a></li>
+                <li class="item"><a href="./about-us.html">About us</a></li>
                 <li class="item"><a href>Resources</a></li>
               </ul>
             </div>
@@ -82,11 +82,11 @@
               </div>
             </a>
             <ul class="menuMobile">
-              <li class="item"><a href>Home</a></li>
+              <li class="item"><a href="./index.html">Home</a></li>
               <li class="item"><a href>Services</a></li>
               <li class="item"><a href>Pricing</a></li>
               <li class="item"><a href>Counties</a></li>
-              <li class="item"><a href>About us</a></li>
+              <li class="item"><a href="./about-us.html">About us</a></li>
               <li class="item"><a href>Resources</a></li>
             </ul>
           </div>
@@ -376,7 +376,73 @@
       <!-- End location ---------------------------------------------------------------------------------------------------------------------->
     </main>
     <footer>
-      <div class="container">Footer</div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="boxLogo">
+              <img src="./public/image/logo.svg" alt="">
+              <img src="./public/image/logo-name.svg" alt="">
+            </div>
+          </div>
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col-md-3">
+                <h5 class="title">Company</h5>
+                <ul class="list">
+                  <li class="item"><a href="">About Us</a></li>
+                  <li class="item"><a href="">Careers</a></li>
+                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
+                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5 class="title">Company</h5>
+                <ul class="list">
+                  <li class="item"><a href="">About Us</a></li>
+                  <li class="item"><a href="">Careers</a></li>
+                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
+                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5 class="title">Company</h5>
+                <ul class="list">
+                  <li class="item"><a href="">About Us</a></li>
+                  <li class="item"><a href="">Careers</a></li>
+                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
+                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5 class="title">Company</h5>
+                <ul class="list">
+                  <li class="item"><a href="">About Us</a></li>
+                  <li class="item"><a href="">Careers</a></li>
+                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
+                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bottomFooter">
+          <div class="row">
+            <div class="col-md-3">
+              <p>Address:  No. 123, Street 456 ,Ward ABC, District ABC, Country</p>
+            </div>
+            <div class="col-md-9">
+              <div class="row">
+                <div class="col-md-3">
+                  <p>Hotline: <a href="">(+84) 123-456-789</a></p> 
+                </div>
+                <div class="col-md-3">
+                  <p>Email: <a href="">abc@gmail.com</a></p> 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
