--- a/about-us.html
+++ b/about-us.html
@@ -10,11 +10,9 @@
     <link href="./public/css/global.css" rel="stylesheet">
     <link href="./public/css/owl.carousel.min.css" rel="stylesheet">
     <link href="./public/css/owl.theme.default.min.css" rel="stylesheet">
-    <script
-    src="./public/js/jquery.min.js"></script>
+    <script src="./public/js/jquery.min.js"></script>
     <script src="./public/js/owl.carousel.min.js"></script>
-    <script
-      src="./public/js/global.js"></script>
+    <script src="./public/js/global.js"></script>
   </head>
   <body>
     <header>
